<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/horizontal_padding"
    android:paddingVertical="@dimen/vertical_padding"
    tools:context="io.github.gianpamx.android.architecture.form.FormActivity">

    <TextView
        android:id="@+id/formInstructionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/form_instructions" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formInstructionTextView"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name_edit_text_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextInputLayout"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_phone_edit_text_hint" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phoneTextInputLayout"
        android:layout_alignRight="@+id/phoneTextInputLayout"
        android:layout_below="@+id/phoneTextInputLayout"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/form_send_button_text" />

    <TextView
        android:id="@+id/dateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/versionTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text="Date Time text" />

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/form_version" />

</RelativeLayout>
